debian-installer (202306XX) UNRELEASED; urgency=medium

  [ Cyril Brulebois ]
  * Install trixie, using trixie udebs.
  * Bump Linux kernel ABI to 6.5.0-5.
  * Bump (temporary) linux-image build-deps accordingly.

  [ harry88@gmx.ph ]
  * Add support for Orange Pi One Plus (Closes: #980493)

  [ Holger Wansing ]
  * Update minimal RAM size value for amd64, according to lowmem value.

  [ Aurelien Jarno ]
  * Build riscv64 from the official archive.
  * Dot not include debian-ports-archive-keyring-udeb on riscv64.

 -- Cyril Brulebois <kibi@debian.org>  Tue, 13 Jun 2023 19:42:29 +0200

debian-installer (20230607) unstable; urgency=medium

  * Release early, release often!

 -- Cyril Brulebois <kibi@debian.org>  Wed, 07 Jun 2023 03:01:56 +0200

debian-installer (20230526) unstable; urgency=medium

  [ Emanuele Rocca ]
  * build/config/x86.cfg: add /splash.png symlink to make GRUB load the
    splash screen when using netboot (Closes: #1036215).

  [ Cyril Brulebois ]
  * Update translation-status for the release.
  * Fix colors in GRUB submenus for x86 netboot (Closes: #1036771).
  * Add CHECK_MINIMAL_VERSION support, so that the release manager can
    combine speedy uploads and peace of mind.

 -- Cyril Brulebois <kibi@debian.org>  Fri, 26 May 2023 09:08:23 +0200

debian-installer (20230515) unstable; urgency=medium

  * Bump Linux kernel ABI to 6.1.0-9.
  * Switch source format from 1.0 to 3.0 (native).
  * Update translation-status for the release.
  * Add temporary workaround for broken graphics when using the “bochs”
    graphics driver (default in QEMU, where it is known as “std”) or the
    “cirrus” one, under UEFI/Secure Boot (See: #1036019):
     - The previous upload seems to trigger a color depth mismatch between
       GRUB which defaults to 24 bpp in its bochs and cirrus video
       modules, and Linux (efifb, built-in) that reports 32 bpp.
     - This affects both the text installer and the graphical installer.