@@ -14,5 +14,3 @@
 <!-- packages involved in D-I -->
 <!ENTITY base-config "<classname>base-config</classname>">
 <!ENTITY tasksel "<classname>tasksel</classname>">
-<!ENTITY win32-loader "<classname>win32-loader</classname>">
-
