@@ -12,11 +12,10 @@ Contents
 
 <para>
 The level 3 of translations contains packages which provide general infrastructure for
-dialogs or for starting the installer from Windows systems.
+dialogs.
 </para>
 
-<para>This includes one package maintained by the &d-i; team (win32-loader) as well as a few
-other Debian packages:
+<para>This includes a few other Debian packages:
 </para>
 
 	    <itemizedlist>
@@ -28,11 +27,6 @@ other Debian packages:
 	    <listitem>
 	      <para>
 		newt
-	      </para>
-	    </listitem>
-	    <listitem>
-	      <para>
-		win32-loader (&d-i; team)
 	      </para>
 	    </listitem>
 	    </itemizedlist>
@@ -229,130 +223,6 @@ none
 </sect3>
 
 </sect2>
-
-<sect2>
-<title>
-Win32-loader
-</title>
-
-<sect3>
-<title>
-Package description
-</title>
-
-<para>
-The &win32-loader; package contains is a utility that can be run from the Windows
-environment and which, with a few questions, prepares a system for booting a &d-i;
-installation process. This utility is included on Debian installation media to
-allow an easier startup of a Debian installation.
-</para>
-
-<para>
-This package is, technically speaking, a <quote>regular</quote>
-Debian package. However, the package maintainer is the &d-i; team and
-the package is managed and developed the same way core &d-i; packages
-are managed. The package is part of the core &d-i; development repository under
-<filename>packages/arch/i386/win32-loader</filename>.
-</para>
-
-</sect3>
-
-<sect3>
-<title>
-Files location and access methods
-</title>
-
-<para>
-Using <acronym>GIT</acronym> is strongly encouraged as
-this is the only way for them to commit the translations.
-</para>
-
-<para>This package's l10n material is included in one POT file:
-</para>
-
-<itemizedlist>
-<listitem>
-<para>
-<filename>l10n/po/messages.pot</filename></para>
-</listitem>
-</itemizedlist>
-
-<para>
-Access to these files:
-</para>
-
-<itemizedlist>
-  <listitem>
-<para>
-GIT clone commands:
-</para>
-<itemizedlist>
-<listitem>
-<command>&git-win32-loader;</command>
-</listitem>
-</itemizedlist>
-    <para>
-      The  <filename>l10n/po</filename> contains the translation material.
-    </para>
-
-  </listitem>
-  <listitem>
-    <para>
-      <acronym>HTTP</acronym> access: 
-    </para>
-    <itemizedlist>
-      <listitem>
-        <para>
-          <ulink url="&url-level3-pot;/win32-loader_l10n_po.pot">&url-level3-pot;/win32-loader_l10n_po.pot</ulink>
-        </para>
-      </listitem>
-      <listitem>
-        <para>
-          &url-level3-po;/win32_loader_l10n_po_&language;.po
-        </para>
-      </listitem>
-    </itemizedlist>
-  </listitem>
-</itemizedlist>
-
-
-</sect3>
-
-<sect3>
-<title>
-Updating/adding translations
-</title>
-
-<para>
-Translators should
-copy the <filename>messages.pot</filename> file in <filename>l10n/po</filename> as
-<filename>&language;.po</filename> and work on this file, then add it to the
-repository and later commit the needed updates.
-</para>
-
-
-<para>
-In case <acronym>GIT</acronym> commits are
-absolutely impossible, these updates can be sent as bug reports
-against the <classname>win32-loader</classname> package (see <xref
-linkend="bug-reports"/> for details).
-</para>
-
-</sect3>
-
-<sect3>
-<title>
-Specific recommendations
-</title>
-
-<para>
-none
-</para>
-
-</sect3>
-
-</sect2>
-
 
 </sect1>
 
